--- a/Sem_2/Labs/Qt/BinTree/BinTree/mainwindow.ui
+++ b/Sem_2/Labs/Qt/BinTree/BinTree/mainwindow.ui
@@ -465,7 +465,7 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>BinTree</string>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
@@ -1906,6 +1906,15 @@
          </color>
         </brush>
        </colorrole>
+       <colorrole role="PlaceholderText">
+        <brush brushstyle="NoBrush">
+         <color alpha="128">
+          <red>0</red>
+          <green>85</green>
+          <blue>127</blue>
+         </color>
+        </brush>
+       </colorrole>
       </active>
       <inactive>
        <colorrole role="WindowText">
@@ -1929,6 +1938,15 @@
        <colorrole role="ButtonText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
+          <red>0</red>
+          <green>85</green>
+          <blue>127</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="PlaceholderText">
+        <brush brushstyle="NoBrush">
+         <color alpha="128">
           <red>0</red>
           <green>85</green>
           <blue>127</blue>
@@ -1961,6 +1979,15 @@
           <red>0</red>
           <green>43</green>
           <blue>63</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="PlaceholderText">
+        <brush brushstyle="NoBrush">
+         <color alpha="128">
+          <red>0</red>
+          <green>85</green>
+          <blue>127</blue>
          </color>
         </brush>
        </colorrole>
